@@ -43,6 +43,8 @@ documents those changes that are of interest to users and admins.
  -- scontrol now displays correct units for job min memory and min tmp disk.
  -- better support for salloc/sbatch arbitrary layout for setting correct 
     SLURM_TASKS_PER_NODE
+ -- env var SLURM_CPUS_ON_NODE is now set correctly depending on the 
+    fastschedule parameter.
 
 * Changes in SLURM 2.0.4
 ========================
